--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -13,6 +13,7 @@
     <script src="{% static 'dashboard/popper.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/bootstrap.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/pace.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/jquery.form.min.js' %}" type="text/javascript"></script>
 
     <!-- CoreUI main scripts -->
     <script src="{% static 'dashboard/app.js' %}"></script>
